# logsmash

./: .gitignore  Cargo.toml  README.md  flake.nix  overlay.nix
.github/workflows/: ci.yml  release.yml
data/: Cargo.toml
data/server/24/: logs.json
data/server/25/: logs.json
data/server/26/: logs.json
data/server/27/: logs.json
data/server/28/: logs.json
data/server/29/: logs.json
data/src/: data.rs  lib.rs  types.rs
data/src/data/: deck_1.rs  deck_1_13.rs  files_accesscontrol_1.rs  files_accesscontrol_1_19.rs  files_antivirus_5.rs  files_antivirus_5_5.rs  mod.rs  server_24.rs  server_25.rs  server_26.rs  server_27.rs  server_28.rs  server_29.rs
logging-extractor/: Cargo.toml
logging-extractor/src/: bake.rs  error.rs  extractor.rs  level.rs  lib.rs  main.rs  messagebuilder.rs  name_resolver.rs  string.rs
logging-extractor/test-data/DefaultShareProvider/: DefaultShareProvider.php
logging-extractor/tests/: snapshot.rs
logging-extractor/tests/snapshots/: snapshot__snapshot_test.snap
nix/: data-mod.nix  extracted-logs.nix  logging-extractor.nix  logsmash.nix  overlay.nix  package.nix  versions.json
src/: app.rs  error.rs  logfile.rs  logline.rs  main.rs  matcher.rs  timegraph.rs
src/logfile/: archive.rs  logline.rs  mod.rs
src/ui/: error_list.rs  footer.rs  grouped_logs.rs  histogram.rs  input.rs  match_list.rs  mod.rs  raw_logs.rs  single_log.rs  single_match.rs  state.rs  style.rs  table.rs
