[package]
name = "logsmash"
version = "0.1.4"
edition = "2021"
rust-version = "1.74.0"

[dependencies]
main_error = "0.1.2"
thiserror = "1.0.63"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
regex = "1.10.5"
log = "0.4.22"
clap = { version = "=4.1.3", features = ["derive"] }
logsmash-data = { version = "0.1.0", path = "./data" }
zip = "2.1.5"
flate2 = "1.0.31"
itertools = "0.13.0"
ratatui = "0.27.0"
tinystr = { version = "0.7.6", features = ["serde"] }
time = { version = "0.3.36", features = ["serde", "serde-well-known", "parsing", "macros"] }
hdrhistogram = "7.5.4"
ahash = "0.8.11"
base64 = "0.21.7"
derive_more = { version = "1.0.0-beta.6", features = ["from"] }
rayon = "1.10.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = "0.6.0"

[profile.dev.package."*"]
opt-level = 3
