[package]
name = "logsmash"
version = "0.1.9"
edition = "2021"
rust-version = "1.81.0"
license = "GPL-3.0-only"

[dependencies]
main_error = "0.1.2"
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
regex = "1.11.1"
clap = { version = "4.5.30", features = ["derive"] }
logsmash-data = { version = "0.1.0", path = "./data" }
itertools = "0.14.0"
ratatui = "0.29.0"
tinystr = { version = "0.8.0", features = ["serde"] }
time = { version = "0.3.37", features = ["serde", "serde-well-known", "parsing", "macros"] }
hdrhistogram = "7.5.4"
ahash = "0.8.11"
base64 = "0.22.1"
derive_more = { version = "2.0.1", features = ["from"] }
rayon = "1.10.0"
tar = "0.4.43"
zip = "2.2.2"
flate2 = "1.0.35"
xz2 = "0.1.7"
bzip2-rs = "0.1.2"
ruzstd = "0.8.0"
dialoguer = "0.11.0"
indicatif = { version = "0.17.11", features = ["rayon"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = "0.6.0"

[profile.dev.package."*"]
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
