[package]
name = "logging-extractor"
version = "0.1.0"
edition = "2021"
rust-version = "1.66.0"

[lib]

[[bin]]
name = "logging-extractor"

[dependencies]
thiserror = "1.0.63"
clap = { version = "4.5.9", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
walkdir = "2.5.0"
tree-sitter = "0.22.6"
tree-sitter-php = "0.22.7"

[build-dependencies]
cc = "1.1.6"

[dev-dependencies]
test-case = "3.3.1"
insta = { version = "1.39.0", features = ["json"] }
