[package]
name = "logging-extractor"
version = "0.1.1"
edition = "2021"
rust-version = "1.66.1"

[lib]

[[bin]]
name = "logging-extractor"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.63"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
walkdir = "2.5.0"
tree-sitter = "0.22.6"
tree-sitter-php = "0.22.7"
memchr = "2.7.4"
databake = { version = "0.1.8", features = ["derive"] }
regex-syntax = "0.8.4"
regex = "1.10.5"

[build-dependencies]
cc = "1.1.6"

[dev-dependencies]
maplit = "1.0.2"
test-case = "3.3.1"
insta = { version = "1.39.0", features = ["json"] }
